--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_API_BASE=https://tanbeeh-dashboard-backend.onrender.com
-VITE_API_BASE=http://localhost:8000
+VITE_API_BASE=https://tanbeeh-dashboard-backend.onrender.com
+# VITE_API_BASE=http://localhost:8000
