--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "axios": "^1.13.2",
     "clsx": "latest",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
     "lucide-react": "0.522.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.11.0",
     "recharts": "^2.12.7",
-    "tailwind-merge": "latest"
+    "tailwind-merge": "latest",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.18",
